[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/AutoclickerButtonGroup.tres" type="ButtonGroup" id=2]
[ext_resource path="res://scenes/ui/AutoclickerControl.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/DraggableWindow.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="AutoclickerControl" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )

[node name="DraggableWindow" parent="." instance=ExtResource( 5 )]

[node name="MarginContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer" index="1"]
margin_bottom = 85.0

[node name="VBoxContainer" type="VBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer" index="0"]
margin_right = 462.0
margin_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 462.0
margin_bottom = 23.0
custom_constants/separation = 16
alignment = 1

[node name="LoopButton" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 154.0
margin_bottom = 23.0
toggle_mode = true
text = "Loop"

[node name="PauseButton" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 219.0
margin_bottom = 23.0
toggle_mode = true
group = ExtResource( 2 )
text = "Pause"

[node name="PlayButton" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 235.0
margin_right = 271.0
margin_bottom = 23.0
toggle_mode = true
group = ExtResource( 2 )
text = "Play"

[node name="ShuffleButton" type="Button" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 287.0
margin_right = 348.0
margin_bottom = 23.0
toggle_mode = true
text = "Shuffle"

[node name="CountLabel" type="Label" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 462.0
margin_bottom = 46.0
align = 2

[node name="ActivePatternVBoxContainer" type="VBoxContainer" parent="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 462.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/LoopButton" to="." method="_on_LoopButton_toggled"]
[connection signal="pressed" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="toggled" from="DraggableWindow/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ShuffleButton" to="." method="_on_ShuffleButton_toggled"]

[editable path="DraggableWindow"]
